# Nadobro_bot

./: .dockerignore  .env.example  .gitignore  .replit  CLAUDE.md  Dockerfile  README.md  TESTNET_RUNTIME_VALIDATION.md  compose.postgres-test.yaml  deploy.md  docker-entrypoint.sh  fly.toml  main.py  mypy.ini  nadobro_backup.sql  package-lock.json  package.json  pyproject.toml  replit.md  requirements-dev.txt  requirements.lock.txt  requirements.txt  run_setup_secrets.py
.claude/: settings.json
.old_site_trash/: package-lock.json  package.json
attached_assets/: Pasted--Revised-Product-Overview-Nadobro-Your-All-in-One-AI-Co_1770668536895.txt  Pasted--We-are-building-the-best-Telegram-bot-for-trading-Perp_1773302549773.txt  Pasted--We-are-building-the-best-Telegram-bot-for-trading-Perp_1773302566964.txt  Pasted--We-are-building-the-best-Telegram-bot-for-trading-Perp_1773302630939.txt  Pasted-16-14-07-2026-03-12-16-14-07-463-INFO-apscheduler-execu_1773332486021.txt  Pasted-Since-you-already-have-the-bot-and-the-Nado-connection-_1771185675556.txt  Pasted-We-are-building-the-best-Telegram-bot-for-trading-Perps_1773302658553.txt
deploy/: nginx-miniapp.conf
design/: NADOBRO_UI_COPY_REWRITE.md  README-handoff.md  README.md  SKILL.md  colors_and_type.css
docs/: ARCHITECTURE.md  CODE_REVIEW.md  ERROR_POLICY.md  FLY_DEPLOY.md  OPS_CLOUDFLARE.md  PRODUCTION_HOSTING.md  SECRETS_SETUP.md  ai_recommendation.md  dgrid_intelligence_upgrade.md  dynamic_grid_strategy.md  managed-ai-agent-integration.md  minara_for_ink_product_spec.md  minara_parity_architecture.md  nado_vault.md  (+10 more)
(+741 files in other folders)
