[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "cryptography>=46.0.4",
    "nado-protocol>=0.3.3",
    "openai>=2.17.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "sqlalchemy>=2.0.46",
]
