[project]
name = "nadobro-bot"
version = "0.2.0"
description = "Nadobro — Telegram trading bot for Perps on Nado (Ink L2 CLOB DEX)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "apscheduler==3.11.2",
    "cryptography==48.0.1",
    "eth-account>=0.8.0,<0.9.0",
    "httpx>=0.27,<1.0",
    "nado-protocol==0.3.3",
    "openai==2.17.0",
    "Pillow>=10.4.0",
    "pinecone>=8.1,<9.0",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.2",
    "python-telegram-bot[webhooks]==22.6",
    "requests==2.33.0",
    "websockets>=10.0.0,<14.0.0",
]
